<resources>
    <string name="welcome_textview">Welcome</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="submit_button_hint">Login</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="attempts_remaining">Attempts Remaining: </string>
    <string name="login_attempts_text">Attempts Remaining:</string>
    <string name="welcome_omar">WELCOME, OMAR!</string>
    <string name="view_class_list">View Person List</string>
    <string name="generate_list">Generate Person List</string>
    <string name="pick_random_person">Pick Random Person</string>
    <string name="omar_s_linkedin">Omar\'s LinkedIn</string>
    <string name="omar_s_github">Omar\'s Github</string>
    <string name="omar_info">omar_info</string>
    <string name="pick_fellow">Select Random Fellow</string>
    <string name="android_5_4_all_stars">ANDROID 5.4 ALL-STARS</string>
    <string name="random_fellow_motivation">Don\'t worry, you can do it!!! If for any reason you feel you can\'t, just know everyone\'s probably in the same boat!!!</string>
    <string name="acceptance_speech_header">Thanks You!</string>
    <string name="acceptance_speech">Hey, look, man! Creating this app was a rollercoaster ride to say the least. I had my ups, I had my downs, I had moments when I just had to walk away from the laptops because regardless of what I did, nothing would work but I stuck it out, and what we have here is the end product of a lot of hard work and persistence. Real quick, I just want to thank God, my mom, TAs like Victoria, Bryant, Darnell, Jose(OG) and Yoki who helped me overcome some of those obstacles I mentioned earlier, and fellow classmates who encouraged me to continue when frustration started kicking in. In closing, if I would pass anything on, anything at all, it would be that you should never give up. If you need to take a break, take a break..if you want to take a quick nap and return to tackle your problem(s) with a fresh perspective, you do just that! \n\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tREMEMBER \nThere are no secrets to success. It is the result of preparation, hard work, and learning from failure. \n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t-Colin Powell</string>
    <string name="sign_in_prompt">Please sign in to continue</string>
    <string name="reset_button_text">Register</string>
    <string name="app_name">Tribute</string>
    <string name="submit_person_info_button_textview">   Submit Person Info   </string>
    <string name="person_phone_number">Person Contact Number</string>
    <string name="person_name">Person Name</string>
    <string name="person_email">Person Email Address</string>
    <string name="add_person_prompt_textview">Enter Person Info Below:</string>
    <string name="submit_editted_info_button_text">Submit Modifed Info</string>
    <string name="title_activity_about_the_creator">AboutTheCreator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_creators_info">CreatorsInfo</string>
    <string name="re_enter_your_password">Re-enter Your Password</string>
    <string name="registration_enter_your_password">Enter Your Password</string>
    <string name="please_enter_desired_credentials_below">Please Enter Desired Credentials Below:</string>
    <string name="register_enter_your_username">Enter Your Username</string>
    <string name="register_button_text">Register</string>
    <string name="checkboxstring">Remember me</string>
    <string name="timethingy">%1$s:%2$s %3$s</string>
</resources>

