<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <TextView
        android:id="@+id/welcome_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_omar"
        android:gravity="center_horizontal"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_screen_imageview"
       />

    <ImageView
        android:id="@+id/welcome_screen_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/welcome_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_screen_buttons"/>

    <LinearLayout
        android:id="@+id/welcome_screen_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/welcome_screen_imageview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/info_from_internet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_class_list"/>

        <Button
            android:id="@+id/pick_random_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_random_person"/>

        <Button
            android:id="@+id/generate_own_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_list"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>