<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    tools:context=".activities.UserRegistrationActivity">

    <TextView
        android:id="@+id/registration_screen_prompt_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_enter_desired_credentials_below"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/user_registration_name_edittext"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText

        android:id="@+id/user_registration_name_edittext"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/oval"
        android:hint="@string/register_enter_your_username"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_screen_prompt_textview" />

    <EditText
        android:id="@+id/user_registration_password_edittext"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:hint="@string/registration_enter_your_password"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:background="@drawable/oval"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_registration_name_edittext" />

    <EditText

        android:id="@+id/user_registration_confirm_password_edittext"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/oval"
        android:hint="@string/re_enter_your_password"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_registration_password_edittext" />


    <Button
        android:id="@+id/user_registration_submit_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/textColor"
        android:text="@string/register_button_text"
        android:textSize="32sp"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_registration_confirm_password_edittext" />


</android.support.constraint.ConstraintLayout>