<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluetoyellowgradientreversed"
    tools:context=".activities.EditPersonDataActivity">

    <TextView
        android:id="@+id/edit_person_prompt_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Modify Person Info Below:"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_person_name_edittext" />

    <EditText
        android:id="@+id/edit_person_name_edittext"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/oval"
        android:hint="@string/person_name"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_person_prompt_textview" />

    <EditText
        android:id="@+id/edit_person_number_edittext"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:inputType="number"
        android:background="@drawable/oval"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:hint="@string/person_phone_number"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_person_name_edittext"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edit_person_email_edittext"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:background="@drawable/oval"
        android:hint="@string/person_email"
        android:inputType="textWebEmailAddress"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_person_number_edittext"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edit_person_notes_edittext"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:background="@drawable/oval"
        android:hint="Person Notes"
        android:layout_marginTop="16dp"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@id/edit_person_email_edittext"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/edit_person_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/submit_editted_info_button_text"
        android:background="@layout/transparentbuttonborder"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_person_notes_edittext" />

</android.support.constraint.ConstraintLayout>